@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-Component-Player-Musicus
-version:      1.31
+version:      1.32
 version_from: lib/POE/Component/Player/Musicus.pm
 installdirs:  site
 requires:
