@@ -1,4 +1,4 @@
-POE-Component-Player-Musicus version 1.31
+POE-Component-Player-Musicus version 1.32
 =========================================
 
 This POE component is used to manipulate the musicus audio player
