@@ -1,5 +1,9 @@
 Revision history for Perl extension POE::Component::Player::Musicus.
 
+1.??  ?? ? ????
+	- POD fixes
+	- Test suite skips test if musicus is not installed
+
 1.31  Jan 1 2006
 	- Fixed broken queue system using the new object based PoCo-Child
 	- Significantly improved test suite
